--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   },
   "dependencies": {
     "@babel/preset-env": "^7.6.0",
+    "@material-ui/core": "^4.8.0",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
     "connect-session-sequelize": "^6.0.0",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
@@ -41,6 +43,7 @@
     "pg-hstore": "^2.3.3",
     "react": "^16.9.0",
     "react-addons-test-utils": "^15.6.2",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
