--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
   "devDependencies": {
     "@babel/core": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
+    "@types/react": "^16.9.23",
+    "@types/react-dom": "^16.9.5",
     "babel-loader": "^8.0.6",
     "babel-register": "^6.26.0",
     "chai": "^4.2.0",
     "css-loader": "^3.2.0",
     "enzyme": "^3.10.0",
     "mocha": "^6.2.0",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^1.0.0",
     "supertest": "^4.0.2",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.8.3",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.8"
   },
