--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "morgan": "^1.9.1",
+    "node-fetch": "^2.6.0",
     "nodemon": "^1.19.2",
     "passport": "^0.4.0",
     "passport-google-oauth": "^2.0.0",
