--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a plant app",
   "main": "server/app.js",
   "scripts": {
-    "test": "NODE_ENV='test' mocha \"./server/**/*.spec.js\" \"./client/**/*.spec.js\" \"./script/**/*.spec.js\" --watch --require @babel/polyfill --require @babel/register",
+    "test": "NODE_ENV='test' mocha \"./server/**/*.spec.js\" \"./client/**/*.spec.js\" \"./script/**/*.spec.js\" --watch --require @babel/polyfill --require @babel/register --require jsdomSetup.js",
     "start": "node server/app.js",
     "start-dev": "webpack -w & nodemon server/app.js",
     "seed": "node seed.js"
@@ -15,14 +15,17 @@
   "devDependencies": {
     "@babel/core": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.8.6",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "babel-loader": "^8.0.6",
+    "babel-polyfill": "^6.26.0",
     "babel-register": "^6.26.0",
     "chai": "^4.2.0",
     "css-loader": "^3.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "jsdom": "^16.2.1",
     "mocha": "^6.2.0",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
@@ -35,6 +38,7 @@
     "webpack-cli": "^3.3.8"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.6.0",
     "@material-ui/core": "^4.8.0",
     "axios": "^0.19.0",
